apps/tup-cms/src/taccsite_custom/tup_cms/static/tup_cms/css/for-core-cms/trumps/search-elements.css
#tacc-google-search {
    /* Whole Search Container */
    /* removes padding from search container */
    & .gsc-control-cse {
        padding: unset;
    }





    /* Table containing search stats and sorting selection options */
    /* remove border from search analytics, add gray background */
    & .gsc-above-wrapper-area {
        max-width: unset;
        border-bottom: unset;
        margin-inline: -100vw;
        padding-inline: 100vw;
        background: var(--global-color-primary--x-light);
    }

    & .gsc-above-wrapper-area-container {
        border-bottom: unset;
    }

    /* To override Core-Styles tables */
    & tbody > tr:first-child > :is(td, th) {
        border: unset;
        padding-inline: unset;
        background: unset;
        vertical-align: middle;
    }

    & .gsc-selected-option-container {
        background: var(--global-color-primary--xx-light);
        border: var(--global-border--normal);
    }

    & .gsc-result-info {
        padding: unset;
        font-size: var(--global-font-size--medium);
    }





    /* Suggestion phrase after "Did you mean:" */
    & .gs-spelling a {
        color: var(--global-color-accent--normal);

        /* to undo core-styles.base */
        /* https://github.com/TACC/Core-Styles/blob/8ab89d3/src/lib/_imports/elements/links.css */
        &:not([href]) {
            opacity: 1;
            pointer-events: auto;
        }
    }

    & .gs-spelling {
        padding: unset;
    }





    /* Search Results */
    /* search result body text */
    & .gs-snippet {
        color: var(--global-color-primary--dark);
    }

    /* url under search result title */
    & .gs-webResult div.gs-visibleUrl {
        color: var(--global-color-secondary--normal);
    }

    /* search result titles */
    & .gs-result .gs-title:not(a):hover {
        /* to remove duplicate underline */
        /* (fix Google's default_v6+en.css bug `.gs-result .gs-title:hover`) */
        text-decoration: auto;
    }
    & a.gs-title:link {
        color: var(--global-color-accent--normal);
        text-decoration: none;
        text-decoration-thickness: var(--global-border-width--normal);
        text-underline-offset: 0.2em;
    }
    & a.gs-title:link:hover {
        text-decoration-line: underline;
        text-decoration-style: solid;
    }
    & a.gs-title b {
        color: currentColor;
    }

    /* push search-result description to right */
    & .gs-image-box {
        margin-right: 10px;
    }





    /* Bottom Google Page Navigation */
    & .gsc-cursor-box {
        display: flex;
        justify-content: center;
        margin-block: var(--global-space--large);
    }

    & .gsc-cursor-current-page {
        color: var(--global-color-accent--normal);
        text-decoration: none;
        text-decoration-thickness: var(--global-border-width--normal);
        text-underline-offset: 0.2em;
    }

    & .gsc-cursor-current-page:hover {
        text-decoration-line: underline;
        text-decoration-style: solid;
    }





    /* adjusts google branding */
    & .gcsc-find-more-on-google {
        color: var(--global-color-accent--normal);
        text-decoration: none;
        text-decoration-thickness: var(--global-border-width--normal);
        text-underline-offset: 0.2em;
    }
    svg.gcsc-find-more-on-google-magnifier {
        fill: currentColor;
    }

    & .gcsc-find-more-on-google:hover {
        text-decoration-line: underline;
        text-decoration-style: solid;
    }

    & .gcsc-branding-img-noclear {
        vertical-align: unset;
        top: 1px;
    }
}

